libcir/c-api/CIRCApi.h

//===----------------------------------------------------------------------===//
// Dialect Registration
//===----------------------------------------------------------------------===//

/// Register the CIR dialect with an MLIR context.
void cirRegisterDialect(MlirContext ctx);
//===----------------------------------------------------------------------===//
// Type Constructors
//===----------------------------------------------------------------------===//

/// Get !cir.ptr type (opaque pointer).
MlirType cirPointerTypeGet(MlirContext ctx);
/// Get !cir.ref<T> type (typed safe reference).
MlirType cirRefTypeGet(MlirContext ctx, MlirType pointeeType);
/// Get !cir.struct<"name", fields...> type.
MlirType cirStructTypeGet(MlirContext ctx, MlirStringRef name,
                          intptr_t nFields,
                          MlirStringRef *fieldNames,
                          MlirType *fieldTypes);
/// Get !cir.array<N x T> type.
MlirType cirArrayTypeGet(MlirContext ctx, int64_t size,
                         MlirType elementType);
/// Get !cir.slice<T> type (fat pointer {ptr, len}).
MlirType cirSliceTypeGet(MlirContext ctx, MlirType elementType);
//===----------------------------------------------------------------------===//
// Type Queries
//===----------------------------------------------------------------------===//

/// Check if a type is !cir.ptr.
bool cirTypeIsPointer(MlirType type);
/// Check if a type is !cir.ref<T>.
bool cirTypeIsRef(MlirType type);
/// Get pointee type from !cir.ref<T>. Undefined if not a ref type.
MlirType cirRefTypeGetPointee(MlirType refType);
/// Check if a type is !cir.struct.
bool cirTypeIsStruct(MlirType type);
/// Get struct field count.
intptr_t cirStructTypeGetNumFields(MlirType structType);
/// Get struct field index by name. Returns -1 if not found.
int cirStructTypeGetFieldIndex(MlirType structType, MlirStringRef name);
/// Check if a type is !cir.array.
bool cirTypeIsArray(MlirType type);
/// Get array size.
int64_t cirArrayTypeGetSize(MlirType arrayType);
/// Get array element type.
MlirType cirArrayTypeGetElementType(MlirType arrayType);
/// Check if a type is !cir.slice<T>.
bool cirTypeIsSlice(MlirType type);
/// Get element type from !cir.slice<T>.
MlirType cirSliceTypeGetElementType(MlirType sliceType);
//===----------------------------------------------------------------------===//
// Constants
//===----------------------------------------------------------------------===//

/// Create cir.constant with integer value.
MlirValue cirBuildConstantInt(MlirBlock block, MlirLocation loc,
                              MlirType type, int64_t value);
/// Create cir.constant with float value.
MlirValue cirBuildConstantFloat(MlirBlock block, MlirLocation loc,
                                MlirType type, double value);
/// Create cir.constant with bool value (i1).
MlirValue cirBuildConstantBool(MlirBlock block, MlirLocation loc,
                               bool value);
/// Create cir.string_constant "value" : !cir.slice<i8>.
MlirValue cirBuildStringConstant(MlirBlock block, MlirLocation loc,
                                 MlirStringRef value);
//===----------------------------------------------------------------------===//
// Arithmetic
//===----------------------------------------------------------------------===//

MlirValue cirBuildAdd(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildSub(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildMul(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildDiv(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildRem(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildNeg(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue operand);
//===----------------------------------------------------------------------===//
// Bitwise
//===----------------------------------------------------------------------===//

MlirValue cirBuildBitAnd(MlirBlock block, MlirLocation loc,
                         MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildBitOr(MlirBlock block, MlirLocation loc,
                        MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildBitXor(MlirBlock block, MlirLocation loc,
                         MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildBitNot(MlirBlock block, MlirLocation loc,
                         MlirType type, MlirValue operand);
MlirValue cirBuildShl(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
MlirValue cirBuildShr(MlirBlock block, MlirLocation loc,
                      MlirType type, MlirValue lhs, MlirValue rhs);
//===----------------------------------------------------------------------===//
// Comparison
//===----------------------------------------------------------------------===//

/// CIR comparison predicates (matches CIR_CmpIPredicate enum values).
enum CirCmpPredicate {
  CIR_CMP_EQ  = 0,
  CIR_CMP_NE  = 1,
  CIR_CMP_SLT = 2,
  CIR_CMP_SLE = 3,
  CIR_CMP_SGT = 4,
  CIR_CMP_SGE = 5,
};
/// Create cir.cmp with predicate. Returns i1.
MlirValue cirBuildCmp(MlirBlock block, MlirLocation loc,
                      enum CirCmpPredicate predicate,
                      MlirValue lhs, MlirValue rhs);
/// Create cir.select (ternary: condition ? trueVal : falseVal).
MlirValue cirBuildSelect(MlirBlock block, MlirLocation loc,
                         MlirType resultType, MlirValue condition,
                         MlirValue trueVal, MlirValue falseVal);
//===----------------------------------------------------------------------===//
// Type Casts
//===----------------------------------------------------------------------===//

MlirValue cirBuildExtSI(MlirBlock block, MlirLocation loc,
                        MlirType dstType, MlirValue input);
MlirValue cirBuildExtUI(MlirBlock block, MlirLocation loc,
                        MlirType dstType, MlirValue input);
MlirValue cirBuildTruncI(MlirBlock block, MlirLocation loc,
                         MlirType dstType, MlirValue input);
MlirValue cirBuildSIToFP(MlirBlock block, MlirLocation loc,
                         MlirType dstType, MlirValue input);
MlirValue cirBuildFPToSI(MlirBlock block, MlirLocation loc,
                         MlirType dstType, MlirValue input);
MlirValue cirBuildExtF(MlirBlock block, MlirLocation loc,
                       MlirType dstType, MlirValue input);
MlirValue cirBuildTruncF(MlirBlock block, MlirLocation loc,
                         MlirType dstType, MlirValue input);
//===----------------------------------------------------------------------===//
// Memory
//===----------------------------------------------------------------------===//

/// Create cir.alloca for stack allocation. Returns !cir.ptr.
MlirValue cirBuildAlloca(MlirBlock block, MlirLocation loc,
                         MlirType elemType);
/// Create cir.store (value → addr).
void cirBuildStore(MlirBlock block, MlirLocation loc,
                   MlirValue value, MlirValue addr);
/// Create cir.load (addr → value).
MlirValue cirBuildLoad(MlirBlock block, MlirLocation loc,
                       MlirType resultType, MlirValue addr);
//===----------------------------------------------------------------------===//
// References (address-of / dereference)
//===----------------------------------------------------------------------===//

/// Create cir.addr_of (&x). Takes !cir.ptr, returns !cir.ref<T>.
MlirValue cirBuildAddrOf(MlirBlock block, MlirLocation loc,
                         MlirType refType, MlirValue addr);
/// Create cir.deref (*p). Takes !cir.ref<T>, returns T.
MlirValue cirBuildDeref(MlirBlock block, MlirLocation loc,
                        MlirType resultType, MlirValue ref);