libtc/libtc.h

// Forward declare bytecode writer functions
MlirLogicalResult mlirOperationWriteBytecodeWithConfig(
    MlirOperation op, MlirBytecodeWriterConfig config,
    MlirStringCallback callback, void *userData);
MlirBytecodeWriterConfig mlirBytecodeWriterConfigCreate();
void mlirBytecodeWriterConfigDestroy(MlirBytecodeWriterConfig config);
void mlirBytecodeWriterConfigDesiredEmitVersion(
    MlirBytecodeWriterConfig config, int64_t version);