libzc/mlir.zig

//! MLIR C API bindings for CIR.
//!
//! Ported from cot-failed/libzc/mlir.zig (489 lines, proven code).
//! Thin Zig wrapper around MLIR C API + CIR dialect registration.

const std = @import("std");

// ============================================================
// MLIR C API types (from mlir-c/IR.h, mlir-c/Support.h)
// ============================================================

pub const StringRef = extern struct {
    data: [*]const u8,
    length: usize,
    pub fn fromSlice(s: []const u8) StringRef {
        return .{ .data = s.ptr, .length = s.len };
    }
    pub fn toSlice(self: StringRef) []const u8 {
        return self.data[0..self.length];
    }
};

pub const LogicalResult = extern struct {
    value: i8,
    pub fn isSuccess(self: LogicalResult) bool { return self.value != 0; }
};

pub const Context = extern struct { ptr: ?*anyopaque };
pub const Module = extern struct { ptr: ?*anyopaque };
pub const Operation = extern struct { ptr: ?*anyopaque };
pub const Block = extern struct { ptr: ?*anyopaque };
pub const Region = extern struct { ptr: ?*anyopaque };
pub const Value = extern struct { ptr: ?*const anyopaque };
pub const Type = extern struct { ptr: ?*const anyopaque };
pub const Attribute = extern struct { ptr: ?*const anyopaque };
pub const Location = extern struct { ptr: ?*const anyopaque };
pub const Identifier = extern struct { ptr: ?*const anyopaque };
pub const NamedAttribute = extern struct { name: Identifier, attribute: Attribute };
pub const OperationState = extern struct {
    name: StringRef, location: Location,
    n_results: isize, results: ?[*]const Type,
    n_operands: isize, operands: ?[*]const Value,
    n_regions: isize, regions: ?[*]const Region,
    n_successors: isize, successors: ?[*]const Block,
    n_attributes: isize, attributes: ?[*]const NamedAttribute,
    enable_result_type_inference: bool,
};
pub const BytecodeWriterConfig = extern struct { ptr: ?*anyopaque };
pub const StringCallback = *const fn (StringRef, ?*anyopaque) callconv(.c) void;

// ============================================================
// MLIR C API functions
// ============================================================

pub extern "c" fn mlirContextCreate() callconv(.c) Context;
pub extern "c" fn mlirContextDestroy(ctx: Context) callconv(.c) void;
pub extern "c" fn mlirContextSetAllowUnregisteredDialects(ctx: Context, allow: bool) callconv(.c) void;
pub extern "c" fn mlirLocationUnknownGet(ctx: Context) callconv(.c) Location;
pub extern "c" fn mlirModuleCreateEmpty(loc: Location) callconv(.c) Module;
pub extern "c" fn mlirModuleGetBody(module: Module) callconv(.c) Block;
pub extern "c" fn mlirModuleGetOperation(module: Module) callconv(.c) Operation;
pub extern "c" fn mlirModuleDestroy(module: Module) callconv(.c) void;
pub extern "c" fn mlirOperationStateGet(name: StringRef, loc: Location) callconv(.c) OperationState;
pub extern "c" fn mlirOperationStateAddResults(state: *OperationState, n: isize, results: [*]const Type) callconv(.c) void;
pub extern "c" fn mlirOperationStateAddOperands(state: *OperationState, n: isize, operands: [*]const Value) callconv(.c) void;
pub extern "c" fn mlirOperationStateAddOwnedRegions(state: *OperationState, n: isize, regions: [*]const Region) callconv(.c) void;
pub extern "c" fn mlirOperationStateAddSuccessors(state: *OperationState, n: isize, successors: [*]const Block) callconv(.c) void;
pub extern "c" fn mlirOperationStateAddAttributes(state: *OperationState, n: isize, attrs: [*]const NamedAttribute) callconv(.c) void;
pub extern "c" fn mlirOperationCreate(state: *OperationState) callconv(.c) Operation;
pub extern "c" fn mlirOperationGetResult(op: Operation, pos: isize) callconv(.c) Value;
pub extern "c" fn mlirOperationVerify(op: Operation) callconv(.c) bool;
pub extern "c" fn mlirBlockCreate(n_args: isize, args: [*]const Type, locs: [*]const Location) callconv(.c) Block;
pub extern "c" fn mlirBlockAppendOwnedOperation(block: Block, op: Operation) callconv(.c) void;
pub extern "c" fn mlirBlockGetArgument(block: Block, pos: isize) callconv(.c) Value;
pub extern "c" fn mlirRegionCreate() callconv(.c) Region;
pub extern "c" fn mlirRegionAppendOwnedBlock(region: Region, block: Block) callconv(.c) void;
pub extern "c" fn mlirOperationGetRegion(op: Operation, pos: isize) callconv(.c) Region;
pub extern "c" fn mlirTypeParseGet(ctx: Context, type_str: StringRef) callconv(.c) Type;
pub extern "c" fn mlirIntegerTypeGet(ctx: Context, bitwidth: c_uint) callconv(.c) Type;
pub extern "c" fn mlirF32TypeGet(ctx: Context) callconv(.c) Type;
pub extern "c" fn mlirF64TypeGet(ctx: Context) callconv(.c) Type;
pub extern "c" fn mlirFunctionTypeGet(ctx: Context, n_inputs: isize, inputs: [*]const Type, n_results: isize, results: [*]const Type) callconv(.c) Type;
pub extern "c" fn mlirIntegerAttrGet(ty: Type, value: i64) callconv(.c) Attribute;
pub extern "c" fn mlirStringAttrGet(ctx: Context, str: StringRef) callconv(.c) Attribute;
pub extern "c" fn mlirIdentifierGet(ctx: Context, str: StringRef) callconv(.c) Identifier;
pub extern "c" fn mlirNamedAttributeGet(name: Identifier, attr: Attribute) callconv(.c) NamedAttribute;
pub extern "c" fn mlirFlatSymbolRefAttrGet(ctx: Context, symbol: StringRef) callconv(.c) Attribute;
pub extern "c" fn mlirTypeAttrGet(ty: Type) callconv(.c) Attribute;
pub extern "c" fn mlirOperationWriteBytecode(op: Operation, callback: StringCallback, user_data: ?*anyopaque) callconv(.c) void;
pub extern "c" fn mlirBytecodeWriterConfigCreate() callconv(.c) BytecodeWriterConfig;
pub extern "c" fn mlirBytecodeWriterConfigDestroy(config: BytecodeWriterConfig) callconv(.c) void;
pub extern "c" fn mlirBytecodeWriterConfigDesiredEmitVersion(config: BytecodeWriterConfig, version: i64) callconv(.c) void;
pub extern "c" fn mlirOperationWriteBytecodeWithConfig(op: Operation, config: BytecodeWriterConfig, callback: StringCallback, user_data: ?*anyopaque) callconv(.c) LogicalResult;

// Type introspection (for cast ops)
pub extern "c" fn mlirValueGetType(value: Value) callconv(.c) Type;
pub extern "c" fn mlirTypeEqual(t1: Type, t2: Type) callconv(.c) bool;
pub extern "c" fn mlirTypeIsAInteger(ty: Type) callconv(.c) bool;
pub extern "c" fn mlirTypeIsAFloat(ty: Type) callconv(.c) bool;
pub extern "c" fn mlirIntegerTypeGetWidth(ty: Type) callconv(.c) c_uint;
pub extern "c" fn mlirFloatTypeGetWidth(ty: Type) callconv(.c) c_uint;

// Operation attribute manipulation (for cir.generic_params)
pub extern "c" fn mlirOperationSetAttributeByName(op: Operation, name: StringRef, attr: Attribute) callconv(.c) void;

// Array attribute (for cir.generic_params array of string attrs)
pub extern "c" fn mlirArrayAttrGet(ctx: Context, numElements: isize, elements: [*]const Attribute) callconv(.c) Attribute;

// ============================================================
// CIR C API (from libcir/c-api/CIRCApi.h)
// ============================================================

// Dialect
pub extern "c" fn cirRegisterDialect(ctx: Context) callconv(.c) void;

// Type constructors
pub extern "c" fn cirPointerTypeGet(ctx: Context) callconv(.c) Type;
pub extern "c" fn cirRefTypeGet(ctx: Context, pointee: Type) callconv(.c) Type;
pub extern "c" fn cirStructTypeGet(ctx: Context, name: StringRef, n: isize, names: [*]const StringRef, types: [*]const Type) callconv(.c) Type;
pub extern "c" fn cirArrayTypeGet(ctx: Context, size: i64, elem: Type) callconv(.c) Type;
pub extern "c" fn cirSliceTypeGet(ctx: Context, elem: Type) callconv(.c) Type;

// Type queries
pub extern "c" fn cirTypeIsPointer(ty: Type) callconv(.c) bool;
pub extern "c" fn cirTypeIsRef(ty: Type) callconv(.c) bool;
pub extern "c" fn cirRefTypeGetPointee(ty: Type) callconv(.c) Type;
pub extern "c" fn cirTypeIsStruct(ty: Type) callconv(.c) bool;
pub extern "c" fn cirStructTypeGetNumFields(ty: Type) callconv(.c) isize;
pub extern "c" fn cirStructTypeGetFieldIndex(ty: Type, name: StringRef) callconv(.c) c_int;
pub extern "c" fn cirTypeIsArray(ty: Type) callconv(.c) bool;
pub extern "c" fn cirArrayTypeGetSize(ty: Type) callconv(.c) i64;
pub extern "c" fn cirArrayTypeGetElementType(ty: Type) callconv(.c) Type;
pub extern "c" fn cirTypeIsSlice(ty: Type) callconv(.c) bool;
pub extern "c" fn cirSliceTypeGetElementType(ty: Type) callconv(.c) Type;

// Constants
pub extern "c" fn cirBuildConstantInt(block: Block, loc: Location, ty: Type, value: i64) callconv(.c) Value;
pub extern "c" fn cirBuildConstantFloat(block: Block, loc: Location, ty: Type, value: f64) callconv(.c) Value;
pub extern "c" fn cirBuildConstantBool(block: Block, loc: Location, value: bool) callconv(.c) Value;
pub extern "c" fn cirBuildStringConstant(block: Block, loc: Location, value: StringRef) callconv(.c) Value;

// Arithmetic
pub extern "c" fn cirBuildAdd(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildSub(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildMul(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildDiv(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildRem(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildNeg(block: Block, loc: Location, ty: Type, operand: Value) callconv(.c) Value;

// Bitwise
pub extern "c" fn cirBuildBitAnd(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildBitOr(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildBitXor(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildBitNot(block: Block, loc: Location, ty: Type, operand: Value) callconv(.c) Value;
pub extern "c" fn cirBuildShl(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildShr(block: Block, loc: Location, ty: Type, lhs: Value, rhs: Value) callconv(.c) Value;

// Comparison
pub extern "c" fn cirBuildCmp(block: Block, loc: Location, pred: c_int, lhs: Value, rhs: Value) callconv(.c) Value;
pub extern "c" fn cirBuildSelect(block: Block, loc: Location, ty: Type, cond: Value, t: Value, f: Value) callconv(.c) Value;

// Casts
pub extern "c" fn cirBuildExtSI(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;
pub extern "c" fn cirBuildExtUI(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;
pub extern "c" fn cirBuildTruncI(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;
pub extern "c" fn cirBuildSIToFP(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;
pub extern "c" fn cirBuildFPToSI(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;
pub extern "c" fn cirBuildExtF(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;
pub extern "c" fn cirBuildTruncF(block: Block, loc: Location, dst: Type, input: Value) callconv(.c) Value;

// Memory
pub extern "c" fn cirBuildAlloca(block: Block, loc: Location, elem: Type) callconv(.c) Value;
pub extern "c" fn cirBuildStore(block: Block, loc: Location, value: Value, addr: Value) callconv(.c) void;
pub extern "c" fn cirBuildLoad(block: Block, loc: Location, result: Type, addr: Value) callconv(.c) Value;

// References
pub extern "c" fn cirBuildAddrOf(block: Block, loc: Location, refTy: Type, addr: Value) callconv(.c) Value;
pub extern "c" fn cirBuildDeref(block: Block, loc: Location, result: Type, ref: Value) callconv(.c) Value;
